Fix missing background color.

--- a/trunk/nebula2/code/doxycfg/doxygen.css
+++ b/trunk/nebula2/code/doxycfg/doxygen.css
@@ -56,6 +56,7 @@ a.qindexref{
 }
 
 body {
+	background: white;
 	color: #000000;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	margin: 0;
